@@ -26,10 +26,8 @@ import org.jeasy.rules.api.RuleListener;
 import org.openremote.container.timer.TimerService;
 import org.openremote.manager.asset.AssetStorageService;
 import org.openremote.model.asset.Asset;
-import org.openremote.model.asset.AssetEvent;
 import org.openremote.model.attribute.AttributeEvent;
 import org.openremote.model.attribute.AttributeInfo;
-import org.openremote.model.attribute.AttributeRef;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.query.filter.GeofencePredicate;
 import org.openremote.model.rules.Assets;
@@ -62,7 +60,6 @@ public class RulesFacts extends Facts implements RuleListener {
     public static final int INITIAL_CAPACITY = 100000;
 
     public static final String ASSET_STATES = "INTERNAL_ASSET_STATES";
-    public static final String ASSET_EVENTS = "INTERNAL_ASSET_EVENTS";
     public static final String EXECUTION_VARS = "INTERNAL_EXECUTION_VAR";
     public static final String ANONYMOUS_FACTS = "ANONYMOUS_FACTS";
 
@@ -83,7 +80,6 @@ public class RulesFacts extends Facts implements RuleListener {
         this.LOG = logger;
 
         super.put(ASSET_STATES, new ArrayDeque<AttributeInfo>(INITIAL_CAPACITY));
-        super.put(ASSET_EVENTS, new ArrayDeque<AssetEvent>(INITIAL_CAPACITY));
         super.put(EXECUTION_VARS, new HashMap<>());
         super.put(ANONYMOUS_FACTS, new ArrayDeque<>(INITIAL_CAPACITY));
     }
@@ -111,11 +107,6 @@ public class RulesFacts extends Facts implements RuleListener {
     }
 
     @SuppressWarnings("unchecked")
-    public Collection<TemporaryFact<AttributeInfo>> getAssetEvents() {
-        return get(ASSET_EVENTS);
-    }
-
-    @SuppressWarnings("unchecked")
     public Collection<Object> getAnonymousFacts() {
         return get(ANONYMOUS_FACTS);
     }
@@ -123,7 +114,6 @@ public class RulesFacts extends Facts implements RuleListener {
     public Map<String, Object> getNamedFacts() {
         return asMap().entrySet().stream().filter(entry ->
                 !entry.getKey().equals(ASSET_STATES)
-                        && !entry.getKey().equals(ASSET_EVENTS)
                         && !entry.getKey().equals(EXECUTION_VARS)
                         && !entry.getKey().equals(ANONYMOUS_FACTS)
         ).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
@@ -131,20 +121,17 @@ public class RulesFacts extends Facts implements RuleListener {
 
     public Stream<Object> getAllFacts() {
         return
+            Stream.concat(
+                getNamedFacts().values().stream().parallel(),
                 Stream.concat(
-                        getNamedFacts().values().stream().parallel(),
-                        Stream.concat(
-                                getAnonymousFacts().stream().parallel(),
-                                Stream.concat(
-                                        getAssetStates().stream().parallel(),
-                                        getAssetEvents().stream().parallel()
-                                )
-                        )
-                ).parallel();
+                    getAnonymousFacts().stream().parallel(),
+                    getAssetStates().stream().parallel()
+                )
+            ).parallel();
     }
 
     public long getFactCount() {
-        return getNamedFacts().size() + getAnonymousFacts().size() + getAssetStates().size() + getAssetEvents().size();
+        return getNamedFacts().size() + getAnonymousFacts().size() + getAssetStates().size();
     }
 
     @SuppressWarnings("unchecked")
@@ -181,7 +168,6 @@ public class RulesFacts extends Facts implements RuleListener {
     public <T> void put(String name, T fact) {
         switch (name) {
             case ANONYMOUS_FACTS:
-            case ASSET_EVENTS:
             case ASSET_STATES:
             case EXECUTION_VARS:
                 throw new IllegalArgumentException("Reserved internal fact name: " + name);
@@ -220,23 +206,6 @@ public class RulesFacts extends Facts implements RuleListener {
         return this;
     }
 
-    public RulesFacts insertAttributeEvent(long expiresMilliSeconds, AttributeInfo attributeInfo) {
-        TemporaryFact<AttributeInfo> fact = new TemporaryFact<>(attributeInfo.getTimestamp(), expiresMilliSeconds, attributeInfo);
-        if (LOG.isLoggable(Level.FINEST)) {
-            LOG.finest("Fact change (INSERT): " + fact + " - on: " + loggingContext);
-        }
-        getAssetEvents().add(fact);
-        return this;
-    }
-
-    public RulesFacts removeAttributeEvents(AttributeRef attributeRef) {
-        if (LOG.isLoggable(Level.FINEST)) {
-            LOG.finest("Fact change (DELETE ALL): " + attributeRef + " on: " + loggingContext);
-        }
-        getAssetEvents().removeIf(fact -> fact.getFact().getRef().equals(attributeRef));
-        return this;
-    }
-
     public RulesFacts putTemporary(String expires, Object value) {
         return putTemporary(TimeUtil.parseTimeDuration(expires), value);
     }
@@ -268,16 +237,13 @@ public class RulesFacts extends Facts implements RuleListener {
     }
 
     public boolean hasTemporaryFacts() {
-        return getTemporaryFacts().count() > 0;
+        return getTemporaryFacts().findAny().isPresent();
     }
 
     public Stream<TemporaryFact<?>> getTemporaryFacts() {
         return Stream.concat(
-                Stream.concat(
-                        getAssetEvents().stream().parallel(),
-                        getNamedFacts().values().stream().parallel().filter(fact -> fact instanceof TemporaryFact<?>).map(fact -> (TemporaryFact<?>) fact)
-                ),
-                getAnonymousFacts().stream().parallel().filter(fact -> fact instanceof TemporaryFact<?>).map(fact -> (TemporaryFact<?>) fact)
+            getNamedFacts().values().stream().parallel().filter(fact -> fact instanceof TemporaryFact<?>).map(fact -> (TemporaryFact<?>) fact),
+            getAnonymousFacts().stream().parallel().filter(fact -> fact instanceof TemporaryFact<?>).map(fact -> (TemporaryFact<?>) fact)
         ).parallel();
     }
 
@@ -343,8 +309,7 @@ public class RulesFacts extends Facts implements RuleListener {
     protected <T> Optional<T> matchFact(Object fact, Class<T> factType, Predicate<T> predicate) {
         if (fact == null)
             return Optional.empty();
-        if (fact instanceof TemporaryFact<?>) {
-            TemporaryFact<?> temporaryFact = (TemporaryFact<?>) fact;
+        if (fact instanceof TemporaryFact<?> temporaryFact) {
             fact = temporaryFact.getFact();
         }
         return Optional.ofNullable(
@@ -419,21 +384,6 @@ public class RulesFacts extends Facts implements RuleListener {
         return assetStates.parallel().filter(p);
     }
 
-    public Optional<TemporaryFact<AttributeInfo>> matchFirstAssetEvent(AssetQuery assetQuery) {
-        return matchAssetEvent(assetQuery).findFirst();
-    }
-
-    public Optional<TemporaryFact<AttributeInfo>> matchLastAssetEvent(AssetQuery assetQuery) {
-        return matchAssetEvent(assetQuery).reduce((first, second) -> second);
-    }
-
-    @SuppressWarnings("unchecked")
-    public Stream<TemporaryFact<AttributeInfo>> matchAssetEvent(AssetQuery assetQuery) {
-        Predicate<AttributeInfo> p = new AssetQueryPredicate(timerService, assetStorageService, assetQuery);
-        return getAssetEvents().stream().parallel()
-                .filter(fact -> this.matchFact(fact, AttributeInfo.class, p).isPresent());
-    }
-
     @Deprecated
     public RulesFacts updateAssetState(String assetId, String attributeName, Object value) {
         // Dispatch the update to the asset processing service
@@ -454,17 +404,9 @@ public class RulesFacts extends Facts implements RuleListener {
 
     public void removeExpiredTemporaryFacts() {
         long currentTimestamp = timerService.getCurrentTimeMillis();
-        getAssetEvents().removeIf(fact -> {
-            boolean result = fact.isExpired(currentTimestamp);
-            if (result && LOG.isLoggable(Level.FINEST)) {
-                LOG.finest("Fact change (DELETE EXPIRED): " + fact + " - on: " + loggingContext);
-            }
-            return result;
-        });
 
         List<Fact<?>> expiredFacts = StreamSupport.stream(super.spliterator(), false).filter(fact -> {
             if (fact.getName().equals(ASSET_STATES)
-                || fact.getName().equals(ASSET_EVENTS)
                 || fact.getName().equals(EXECUTION_VARS)
                 || fact.getName().equals(ANONYMOUS_FACTS)
                 || !(fact.getValue() instanceof TemporaryFact<?>)) {
@@ -476,14 +418,13 @@ public class RulesFacts extends Facts implements RuleListener {
                 LOG.finest("Fact change (DELETE EXPIRED): " + fact.getValue() + " - on: " + loggingContext);
             }
             return result;
-        }).collect(Collectors.toList());
+        }).toList();
 
         expiredFacts.forEach(this::remove);
 
         getAnonymousFacts().removeIf(fact -> {
             boolean result = false;
-            if (fact instanceof TemporaryFact<?>) {
-                TemporaryFact<?> temporaryFact = (TemporaryFact<?>) fact;
+            if (fact instanceof TemporaryFact<?> temporaryFact) {
                 result = temporaryFact.isExpired(timerService.getCurrentTimeMillis());
             }
             if (result && LOG.isLoggable(Level.FINEST)) {
@@ -500,7 +441,7 @@ public class RulesFacts extends Facts implements RuleListener {
         }
 
         boolean haveLog = false;
-        if (getAllFacts().count() > 0) {
+        if (getAllFacts().findAny().isPresent()) {
             logger.log(level, "--------------------------------- CLOCK ---------------------------------");
             logger.log(level, Instant.ofEpochMilli(timerService.getCurrentTimeMillis()).toString());
             haveLog = true;
@@ -508,33 +449,24 @@ public class RulesFacts extends Facts implements RuleListener {
 
         List<AttributeInfo> sortedAssetStates = new ArrayList<>(getAssetStates());
         sortedAssetStates.sort(Comparator.naturalOrder());
-        if (sortedAssetStates.size() > 0) {
+        if (!sortedAssetStates.isEmpty()) {
             logger.log(level, "--------------------------------- ASSET STATES (" + sortedAssetStates.size() + ") ---------------------------------");
             for (AttributeInfo assetState : sortedAssetStates) {
                 logger.log(level, assetState.toString());
             }
             haveLog = true;
         }
-        List<TemporaryFact<AttributeInfo>> sortedAssetEvents = new ArrayList<>(getAssetEvents());
-        if (sortedAssetEvents.size() > 0) {
-            logger.log(level, "--------------------------------- ASSET EVENTS (" + sortedAssetEvents.size() + ") ---------------------------------");
-            sortedAssetEvents.sort(Comparator.comparing(TemporaryFact::getTime));
-            for (TemporaryFact<AttributeInfo> assetEvent : sortedAssetEvents) {
-                logger.log(level, assetEvent.toString());
-            }
-            haveLog = true;
-        }
         Map<String, Object> namedFacts = getNamedFacts();
         List<String> names = new ArrayList<>(namedFacts.keySet());
         names.sort(Comparator.naturalOrder());
-        if (names.size() > 0) {
+        if (!names.isEmpty()) {
             logger.log(level, "--------------------------------- NAMED FACTS (" + names.size() + ") ---------------------------------");
             for (String name : names) {
                 logger.log(level, String.format("%s => %s", name, namedFacts.get(name)));
             }
             haveLog = true;
         }
-        if (getAnonymousFacts().size() > 0) {
+        if (!getAnonymousFacts().isEmpty()) {
             logger.log(level, "--------------------------------- ANONYMOUS FACTS (" + getAnonymousFacts().size() + ") ---------------------------------");
             for (Object o : getAnonymousFacts()) {
                 logger.log(level, String.format("%s", o));
@@ -548,7 +480,7 @@ public class RulesFacts extends Facts implements RuleListener {
         boolean haveLog = false;
         List<String> sortedVars = new ArrayList<>(getVars().keySet());
         sortedVars.sort(Comparator.naturalOrder());
-        if (sortedVars.size() > 0) {
+        if (!sortedVars.isEmpty()) {
             logger.info("--------------------------------- BOUND VARIABLES (" + sortedVars.size() + ") ---------------------------------");
             for (String var : sortedVars) {
                 logger.info(String.format("%s => %s", var, getVars().get(var)));
@@ -567,21 +499,13 @@ public class RulesFacts extends Facts implements RuleListener {
         Function<AttributeInfo, String> keyExtractor = AttributeInfo::getAssetName;
         boolean reverse = orderBy.descending;
 
-        switch (orderBy.property) {
-
-            case CREATED_ON:
-                keyExtractor = assetState -> Long.toString(assetState.getCreatedOn().getTime());
-                break;
-            case ASSET_TYPE:
-                keyExtractor = AttributeInfo::getAssetType;
-                break;
-            case PARENT_ID:
-                keyExtractor = AttributeInfo::getParentId;
-                break;
-            case REALM:
-                keyExtractor = AttributeInfo::getRealm;
-                break;
-        }
+        keyExtractor = switch (orderBy.property) {
+            case CREATED_ON -> assetState -> Long.toString(assetState.getCreatedOn().getTime());
+            case ASSET_TYPE -> AttributeInfo::getAssetType;
+            case PARENT_ID -> AttributeInfo::getParentId;
+            case REALM -> AttributeInfo::getRealm;
+            default -> keyExtractor;
+        };
 
         Comparator<AttributeInfo> comparator = Comparator.comparing(keyExtractor);
 
